# geoterminal

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  commands.py  geoterminal.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  search.html  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  tests.yml
api/file_io/: index.html
api/geometry_operations/: index.html
api/h3_operations/: index.html
changelog/: index.html
cli/: index.html
contributing/: index.html
docs/: api.md  changelog.md  cli.md  contributing.md  faq.md  index.md  installation.md  usage.md
docs/api/: file_io.md  geometry_operations.md  h3_operations.md
docs/usage/: commands.md  examples.md  getting-started.md
faq/: index.html
functions/: conversion.py  h3funcs.py
geoterminal/: __init__.py  _version.py  cli.py  log.py  utils.py
geoterminal/classes/: __init__.py  databaseclass.py
geoterminal/cli/: main.py  parser.py  processor.py
geoterminal/cli/commands/: clip.py  head_tail.py
geoterminal/file_io/: file_io.py
geoterminal/geom/: loading.py
geoterminal/geometry_operations/: geometry_operations.py
geoterminal/h3_operations/: h3_operations.py
geoterminal/io/: file.py
geoterminal/operators/: data_operations.py  geometry_operations.py  h3_operations.py  inspect_operations.py
installation/: index.html
search/: search_index.json
src/: cli.py
src/file_io/: file_io.py
src/geometry_operations/: geometry_operations.py
src/h3_operations/: h3_operations.py
src/utils/: helpers.py
tests/: test_conversion.py  test_fileio.py  test_geometry.py  test_h3funcs.py  test_io.py  test_operation_order.py  test_operators_data.py  test_operators_geometry.py  test_operators_h3.py  test_operators_inspect.py
usage/: index.html
