[tool.poetry]
name = "geoterminal"
version = "0.1.0"
description = "Geoterminal is a command-line tool designed to simplify common GIS (Geographic Information System) tasks that you may encounter in your daily work."
authors = ["jeronimoluza <jero.luza@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


geopandas = "^1.0.1"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
shapely = "^2.0.4"
h3 = "4.0.0b2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
geoterminal="geoterminal:cli"
