[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoterminal"
version = "0.1.0"
description = "Geoterminal is a command-line tool designed to simplify common GIS tasks that you may encounter in your daily work."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jerónimo Luza", email = "jero.luza@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=0.9.0",
    "pandas>=1.2.0",
    "pyarrow>=6.0.0",
    "shapely>=1.7.0",
    "h3==4.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/jeronimoluza/geoterminal"
Repository = "https://github.com/jeronimoluza/geoterminal"

[project.scripts]
geoterminal = "geoterminal.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["geoterminal"]
